--- a/baiduxueyuan/cast15/index.html
+++ b/baiduxueyuan/cast15/index.html
@@ -30,14 +30,12 @@
  */
 function getData() {
 	var data=[];
-	var source=document.getElementById("source");
-	var li=source.getElementsByTagName("li");
-	var sum=source.getElementsByTagName("b");
+	var li=document.getElementById("source").getElementsByTagName("li");
 	for(var i=0;i<li.length;i++){
 		data[i]=[];
-		data[i][0]=sum[i].innerHTML;
-		data[i][1]=li[i].innerHTML;
-		console.log(data[i][0]);
+		data[i][0]=li[i].getElementsByTagName("b")[0].innerHTML;
+		data[i][1]=li[i].innerHTML.match(/(.*)空气/)[1];
+		//console.log(data[i][0]);
 	}
 
 	/*
@@ -71,7 +69,7 @@ function render(data) {
 	var item=["一","二","三","四","五","六","七","八","九","十"];
 	var listcon="";
 	for(var sum in data){
-		listcon+="<li>第"+item[sum]+"名："+data[sum][1]+"</li>\n";
+		listcon+="<li>第"+item[sum]+"名："+data[sum][1]+"空气质量"+data[sum][0]+"</li>\n";
 	}
 	document.getElementById("resort").innerHTML=listcon;
 	//console.log(listcon);
@@ -89,9 +87,10 @@ function init() {
 init();
 
 /**
- * childElementCount
- * split
- * firstElementChild
+ * childElementCount//IE9+
+ * split字符串切割
+ * match正则表达式
+ * firstElementChild//IE9+
  */
 </script>
 	<!-- <script src="http://apps.bdimg.com/libs/jquery/1.9.1/jquery.min.js"></script> -->
