17卡在数据处理上，18能使用

--- a/baiduxueyuan/cast/index.html
+++ b/baiduxueyuan/cast/index.html
@@ -5,9 +5,7 @@
 	<title></title>
 </head>
 <body>
-	<!-- <script src="http://apps.bdimg.com/libs/jquery/1.9.1/jquery.min.js"></script> -->
-	<script>
-
-	</script>
+	<script src="task.js"></script>
+	<script></script>
 </body>
 </html>
