--- a/baiduxueyuan/cast18/index.html
+++ b/baiduxueyuan/cast18/index.html
@@ -8,7 +8,7 @@
 	</style>
 </head>
 <body>
-	<div>
+	<div id="from">
 		<input type="text" name="sum">
 		<button id="leftin">左侧如</button>
 		<button id="rightin">右侧入</button>
@@ -17,48 +17,33 @@
 	</div>
 	<div id="content"><p>1</p></div>
 	<script>
-	function getId(id){
-		return document.getElementById(id);
-	}
-	var leftin=getId("leftin"),
-		rightin=getId("rightin"),
-		leftout=getId("leftout"),
-		rightout=getId("rightout"),
-		content=getId("content");
-	leftin.onclick=function(){
-		var value=document.getElementsByName("sum")[0].value;
-		if(isInt(value)){
-			var p_tag=document.createElement("p");
-			p_tag.innerHTML=value;
-			content.insertBefore(p_tag,content.getElementsByTagName("p")[0]);
-		}
-	}
-	rightin.onclick=function(){
-		var value=document.getElementsByName("sum")[0].value;
-		if(isInt(value)){
-			var p_tag=document.createElement("p");
-			p_tag.innerHTML=value;
-			content.appendChild(p_tag);
-		}
-	}
-	rightout.onclick=function(){
+	var content=document.getElementById("content"),
+		from=document.getElementById("from");
+	from.addEventListener("click",function(event){
+		var _this=event.target;
+		var id=_this.getAttribute("id");
 		var old_p=content.getElementsByTagName("p");
-		content.removeChild(old_p[old_p.length-1]);
-	}
-	leftout.onclick=function(){
-		var old_p=content.getElementsByTagName("p");
-		content.removeChild(old_p[0]);
-	}
-	function isInt(value){
-		if(!/^\d+$/.test(value)){
-			console.log("请输入数字");
-			return false;
+		if(id=="leftin"||id=="rightin"){//isInt(value)
+			var value=document.getElementsByName("sum")[0].value;
+			if(!/^\d+$/.test(value)){
+				var p_tag=document.createElement("p");
+				p_tag.innerHTML=value;
+				if(id=="leftin"){
+					content.insertBefore(p_tag,old_p[0]);
+				}else{
+					content.appendChild(p_tag);
+				}
+			}else{
+				console.log("你的输入value值："+value+"，请输入数字");
+			}
 		}else{
-			return true;
+			if(id=="rightout"){
+				content.removeChild(old_p[old_p.length-1]);
+			}else if(id=="leftout"){
+				content.removeChild(old_p[0]);
+			}
 		}
-	}
-
-
+	},false)
 	</script>
 </body>
 </html>
