--- a/baiduxueyuan/cast18/index.html
+++ b/baiduxueyuan/cast18/index.html
@@ -18,5 +18,7 @@
 	<div id="content"><p>1</p></div>
 	<!--<script src="script.js"></script>-->
 	<script src="object.js"></script>
+	<!--http://ife.baidu.com/review/detail?workId=2592-->
+	<!--分别是基础版,面向对象版,原型与模块版-->
 </body>
 </html>
