19课先不做了，敢进度，创建20课，写了mark的说明文档

--- a/baiduxueyuan/cast20/index.html
+++ b/baiduxueyuan/cast20/index.html
@@ -13,6 +13,10 @@
 			padding: 0;
 			margin-top: 50px;
 		}
+		#content span{
+			color: #000;
+			background: #ffff00;
+		}
 		p{
 			margin: 0;
 			display: inline-block;
@@ -20,8 +24,8 @@
 			font-size: 12px;
 			text-align: center;
 			vertical-align: bottom;
-			padding: 10px 0;
-			width: 29px;
+			padding: 10px 5px;
+			/*width: 29px;*/
 			border-right: 1px solid #fff;
 			background: #ff7a0e;
 			cursor: pointer;
@@ -29,24 +33,29 @@
 		p:hover{
 			background: #ff3d00;
 		}
+		#text{
+			width: 300px;
+			height: 160px;
+			display: inline-block;
+			padding: 16px;
+			vertical-align: bottom;
+			resize: none;
+		}
 	</style>
 </head>
 <body>
 	<div id="from">
-		<input type="text" name="sum">
+		<textarea id="text"></textarea>
 		<button id="leftin">左侧如</button>
 		<button id="rightin">右侧入</button>
 		<button id="leftout">左侧出</button>
 		<button id="rightout">右侧出</button>
 		<button id="random">随机数组(60)</button>
 		<button id="sort">冒泡排序</button>
+		<input type="text" id="searchtext">
+		<button id="search">查询</button>
 	</div>
 	<div id="content"></div>
-	<script src="object-2.js"></script>
-	<!--
-	因为有好几个版本的实现,所以在统一文件中写注释
-	1.object递归版(冒泡排序)
-	2.object-1演示版(冒泡排序)
-	-->
+	<script src="object-1.js"></script>
 </body>
 </html>
