--- a/baiduxueyuan/cast21/index.html
+++ b/baiduxueyuan/cast21/index.html
@@ -26,7 +26,7 @@
 	</div>
 	<div class="like">
 		<textarea name="like" id="like"></textarea>
-		<button>提交</button>
+		<button id="ok">提交</button>
 		<div class="likecon">
 
 		</div>
