--- a/baiduxueyuan/cast21/index.html
+++ b/baiduxueyuan/cast21/index.html
@@ -5,10 +5,7 @@
 	<title></title>
 	<style>
 		p{display: inline-block;color: #ffffff;background: #f00;padding: 10px 12px;margin: auto 2px;cursor: pointer}
-		p:hover:after{
-			content="删除:";
-		}
-		span{background: #ffff00;color:#222222;}
+		p:hover{background: #ff7a0e;}
 		textarea{resize: none;padding: 10px;height: 300px;width: 200px;}
 		.tag{min-height: 200px;}
 		input{
