整理13～20课代码

--- a/baiduxueyuan/cast13/index.html
+++ b/baiduxueyuan/cast13/index.html
@@ -39,33 +39,20 @@
 		/**
 		 * 2.组件化，验证，代码格式化
 		 */
-		// function getId(id,idname){
-		// 	if(idname === undefined){
-		// 		return document.getElementById(id);
-		// 	}else{
-		// 		var idname = document.getElementById(id);
-		// 		// 这里会有变量作用域限制？
-		// 	}
-		// }
 
-		// getId("button","botton");
-		// var apiInput = getId("aqi-input");
-		// var apiDisplay = getId("aqi-display");
-		// button.onclick = function(){
-		// 	valToText();
-		// }
-		// function valToText(){
-		// 	var val = parseInt(apiInput.value);
-		// 	if(!isNaN(val) && val>=0 && val<=1000 ){
-		// 		apiDisplay.innerHTML = val;
-		// 	}else{
-		// 		apiDisplay.innerHTML = "请输入0～1000之间的整数";
-		// 	}
-		// }
-		// apiInput.onkeyup = function(event){
-		// 	valToText();
-		// 	console.log(event.keyCode);
-		// }
+//		 var apiInput = document.getElementById("aqi-input");
+//		 var apiDisplay = document.getElementById("aqi-display");
+//		 apiInput.onkeyup = function (event){
+//			 var val = parseInt(apiInput.value);
+//			 if(!isNaN(val) && val>=0 && val<=1000 ){
+//				 apiDisplay.innerHTML = val;
+//			 }else{
+//				 apiDisplay.innerHTML = "请输入0～1000之间的整数";
+//			 }
+//			 console.log(event.keyCode);
+//		 }
+
+
 		/**
 		 * /2.
 		 * valToText函数与选择ID对象有很强的依赖关系，必须先定义再使用
