--- a/baiduxueyuan/cast22/index.html
+++ b/baiduxueyuan/cast22/index.html
@@ -15,19 +15,15 @@
 			width: 1100px;
 			height: 200px;
 			margin: 30px;
-			background: #fffffa;
 		}
 		.c1{
 			border: 2px solid #075ccb;
-			background: #faffff;
 		}
 		.c2{
 			border: 2px solid #ff00d4;
-			background: #fffaff;
 		}
 		.c3{
 			border: 2px solid #ff3d00;
-			background: #fafaff;
 		}
 		button{
 			background: #ff7a0e;
@@ -38,6 +34,9 @@
 		}
 		button:focus{
 			background: #ff0000;
+		}
+		button[disabled]{
+			cursor: no-drop;
 		}
 	</style>
 </head>
